--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -81,8 +81,6 @@
   font-style: normal;
 }
 
-
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -115,7 +113,8 @@
 }
 
 @keyframes wave {
-  0%, 100% {
+  0%,
+  100% {
     opacity: 0.8;
   }
   50% {
@@ -155,17 +154,9 @@
   animation-delay: 0.7s; /* 1.4s delay for the eighth arrow */
 }
 
-
-
-
 .group:hover .moving-arrows-item:first-child {
   display: none;
 }
-
-
-
-
-
 
 /*  */
 /*  */
@@ -206,7 +197,7 @@
 
 h1 {
   color: white;
-  font-family: 'Space Grotesk', sans-serif;
+  font-family: "Space Grotesk", sans-serif;
   font-size: clamp(2em, 2vw, 4em);
   font-weight: 400;
   margin: 0px;
@@ -255,7 +246,6 @@ h1 > .magic > .magic-text {
   white-space: nowrap;
 }
 
-
 .stitch-shadow {
   position: relative;
   border-radius: 16px;
@@ -267,7 +257,38 @@ h1 > .magic > .magic-text {
   inset: 0;
   border-radius: inherit;
   padding: 2px; /* Adjust thickness */
-  mask-image: repeating-linear-gradient(90deg, white 0px, white 5px, transparent 5px, transparent 10px);
-  -webkit-mask-image: repeating-linear-gradient(90deg, white 0px, white 5px, transparent 5px, transparent 10px);
+  mask-image: repeating-linear-gradient(
+    90deg,
+    white 0px,
+    white 5px,
+    transparent 5px,
+    transparent 10px
+  );
+  -webkit-mask-image: repeating-linear-gradient(
+    90deg,
+    white 0px,
+    white 5px,
+    transparent 5px,
+    transparent 10px
+  );
   background: white;
+}
+
+@keyframes water-ripple {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(6);
+    opacity: 0.1;
+  }
+}
+
+.ripple-on-image {
+  position: absolute;
+  border-radius: 9999px;
+  background: rgba(179, 224, 84,1 ); 
+  pointer-events: none;
+  animation: water-ripple 1s ease-out;
 }
