--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+@import "react-grid-layout/css/styles.css";
+@import "react-resizable/css/styles.css";
 
 @tailwind base;
 @tailwind components;
@@ -288,7 +290,7 @@ h1 > .magic > .magic-text {
 .ripple-on-image {
   position: absolute;
   border-radius: 9999px;
-  background: rgba(179, 224, 84,1 ); 
+  background: rgba(179, 224, 84, 1);
   pointer-events: none;
   animation: water-ripple 1s ease-out;
 }
@@ -306,3 +308,4 @@ h1 > .magic > .magic-text {
   -webkit-mask-position: top center;
   mask-position: top center;
 }
+
